* Обновил некоторые зависимости; * Сделал приложение совместимым с Java 8;